<resources>
    <string name="app_name" translatable="false">CookBook </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="discover_recipes">Discover Recipes</string>
    <string name="discover_recipes_description">Explore thousands of delicious recipes\nfrom cuisines around the world and\nfind your next favorite meal.</string>
    <string name="save_your_favorites">Save Your Favorites</string>
    <string name="save_your_favorites_description">Keep your favorite recipes in one place for quick access.</string>
    <string name="button_next">Next</string>
    <string name="welcome">Welcome,</string>
    <string name="find_your_next_favorite_recipe">Find your next favorite recipe</string>
    <string name="home_page_query_hint">Search recipes...</string>
    <string name="roll_the_dice">Roll the Dice🎲</string>
    <string name="can_t_decide_roll_for_a_surprise_recipe">Can\'t decide? Roll for a surprise recipe</string>
    <string name="made_for_you">Made for You</string>
    <string name="based_on_your_preferred_cuisine">Based on your preferred cuisine</string>
    <string name="no_cuisine_selected">No cuisine selected</string>
    <string name="no_cuisine_selected_description">Pick your favorite cuisine to get personalized recipe recommendations.</string>
    <string name="tap_to_choose_cuisine">Tap to choose cuisine</string>
    <string name="explore_by_ingredient">Explore by Ingredient</string>
    <string name="based_on_your_favorite_ingredient">Based on your favorite ingredient</string>
    <string name="no_ingredient_selected">No ingredient selected</string>
    <string name="no_cuisine_logo" translatable="false">🗺️</string>
    <string name="no_ingredient_logo" translatable="false">🥬</string>
    <string name="no_ingredient_description">Choose your favorite ingredient to discover recipes made with them.</string>
    <string name="tap_to_choose_ingredient">Tap to choose ingredient</string>
    <string name="explore_cuisines">Explore Cuisines</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="find_your_favorite_meal_by_name">Find your favorite meal by name</string>
    <string name="ready_to_cook">Ready to cook?</string>
    <string name="ready_to_cook_description">Start typing to search recipes\nfrom our global kitchen.</string>
    <string name="no_recipes_found">No recipes found...</string>
    <string name="try_searching_with_another_keyword">Try searching with another keyword.</string>
    <string name="search_results">Search Results</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="number_of_recipes">Number of recipes:</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="explore_categories_description">Find your next favorite meal from our\ncurated collection of kitchen-tested recipes.</string>
    <string name="profile">Profile</string>
    <string name="account_options">Account Options</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="preferred_cuisine">Preferred Cuisine</string>
    <string name="favorite_ingredient">Favorite Ingredient</string>
    <string name="start_your">Start Your</string>
    <string name="cooking_journey">Cooking Journey</string>
    <string name="save_organize_and_access_10_your_recipes_anytime">Save, organize and access\nyour recipes anytime.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_description">Sign up to discover, save, and \ncook delicious recipes.</string>
    <string name="email">Email</string>
    <string name="username_register">Username</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login_here">Login Here</string>
    <string name="login_description">Welcome back you\'ve\nbeen missed!</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="version">VERSION</string>
    <string name="_1_0" translatable="false">1.0</string>
    <string name="developer">DEVELOPER</string>
    <string name="samed_tevin">Samed Tevin</string>
    <string name="api_source">API SOURCE</string>
    <string name="themealdb" translatable="false">TheMealDB</string>
    <string name="ok_button">Ok</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="moroccan">Moroccan</string>
    <string name="chinese">Chinese</string>
    <string name="russian">Russian</string>
    <string name="thai">Thai</string>
    <string name="irish">Irish</string>
    <string name="greek">Greek</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="tags">Tags</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="watch_on_youtube">Watch On YouTube</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="edit_description">Keep your information up to date</string>
    <string name="edit_your_changes">Edit your changes</string>
    <string name="egg">Egg</string>
    <string name="beef">Beef</string>
    <string name="bread">Bread</string>
    <string name="sugar">Sugar</string>
    <string name="cheese">Cheese</string>
    <string name="cocoa">Cocoa</string>
    <string name="milk">Milk</string>
    <string name="honey">Honey</string>
    <string name="carrots">Carrots</string>
    <string name="cucumber">Cucumber</string>
    <string name="select_language">Select Language</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Are you sure you want to log out\nfrom your account?</string>
    <string name="log_out">Log out</string>
    <string name="about">About</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="spain">Spain</string>
    <string name="brazil">Brazil</string>
    <string name="china">China</string>
    <string name="france">France</string>
    <string name="turkey">Turkey</string>
    <string name="netherlands">Netherlands</string>
    <string name="india">India</string>
    <string name="greece">Greece</string>
    <string name="italy">Italy</string>
    <string name="united_states">United States</string>
    <string name="japan">Japan</string>
    <string name="ukraine">Ukraine</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="ireland">Ireland</string>
    <string name="russia">Russia</string>
    <string name="thailand">Thailand</string>
    <string name="morocco">Morocco</string>
    <string name="vietnam">Vietnam</string>
    <string name="bulgaria">Bulgaria</string>
    <string name="turkish">Turkish</string>
    <string name="english">English 🇬🇧</string>
    <string name="german">German 🇩🇪</string>
    <string name="turkish_lang">Turkish 🇹🇷</string>
    <string name="french">French 🇫🇷</string>
    <string name="chinese_lang">Chinese 🇨🇳</string>
    <string name="russian_lang">Russian 🇷🇺</string>
    <string name="discover_recipes_fragment">Discover Recipes:</string>
    <string name="full_name">Full Name</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="breakfast">Breakfast</string>
    <string name="chicken">Chicken</string>
    <string name="dessert">Dessert</string>
    <string name="goat">Goat</string>
    <string name="lamb">Lamb</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pasta">Pasta</string>
    <string name="pork">Pork</string>
    <string name="seafood">Seafood</string>
    <string name="side">Side</string>
    <string name="starter">Starter</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="your_lucky_letter">Your Lucky Letter</string>
    <string name="lucky_letter_desc">Spin the wheel and see what you’ll discover!</string>
    <string name="selected_letter">Selected Letter</string>
    <string name="spin">Spin</string>
    <string name="recipes_starting_with">Recipes starting with</string>
    <string name="recipes_found">" Recipes Found"</string>
    <string name="play_a_game">Want to play a game?</string>
    <string name="set1">🍳 Explore Recipes • 🏷️ Filter by Category • 🌍 Discover by Country • ⭐ Save Favorites</string>
    <string name="set2">🔎 Search by Ingredient • 🥘 Find Your Next Meal • 🎲 Roll the Dice • ❤️ Keep What You Love</string>
    <string name="set3">🌍 Explore World Cuisines • 🏷️ Browse Categories • 🎡 Spin the Wheel • 🍴 Discover Something New</string>
    <string name="set4">🔎 Search Your Cravings • ⭐ Save Recipes • 🎲 Let the Dice Decide • 🌶️ Try a New Flavor</string>
    <string name="set5">🍴 Browse Recipes • 🌍 Taste Around the World • 🎡 Let the Wheel Choose • 🥗 Find Your Next Favorite</string>
    <string name="see_all">See All</string>
    <string name="no_favorite_recipes_yet">No favorite recipes yet</string>
    <string name="favorites_yet_desc">Tap the heart icon on any recipe or\n explore our kitchen to save your\n favorites here.</string>
    <string name="delete_account">Delete Account?</string>
    <string name="delete_account_desc">Are you sure you want to delete your account?\n All your saved recipes, customized preferences, and collections will be permanently removed.</string>
    <string name="delete_account_sub_text">This action is permanent and cannot be undone.</string>
    <string name="delete_account_btn">Delete Account</string>
</resources>