<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"/>
    <item
        android:id="@+id/favoritesFragment"
        android:title="@string/favorites"
        android:icon="@drawable/baseline_favorite_24"/>
    <item
        android:id="@+id/categoriesFragment"
        android:title="@string/categories"
        android:icon="@drawable/baseline_category_24"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_24"/>

</menu>