<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"

    android:orientation="vertical"
    android:gravity="center_horizontal"

    android:layout_margin="20dp"
    android:padding="10dp"

    tools:context=".ui.fragments.RegisterFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/create_account"

        android:fontFamily="@font/poppins_semibold"

        android:textColor="@color/primary"

        android:textSize="40sp"

        android:layout_marginTop="40dp"

        android:layout_marginBottom="10dp"/>



    <TextView

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:text="@string/create_account_description"

        android:textAlignment="center"

        android:textColor="@color/text_primary"

        android:textSize="20sp"

        android:fontFamily="@font/plus_jakarta_sans_semibold"

        android:lineHeight="25dp"

        android:layout_marginBottom="50dp"/>





    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:hint="@string/email"

        android:layout_marginBottom="20dp"

        app:boxBackgroundMode="outline"

        app:boxStrokeColor="@color/text_input_color"

        app:boxStrokeWidth="3dp">


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/etMail"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:textColor="@color/text_primary"

            android:textColorHint="@color/text_secondary"

            android:backgroundTint="@color/surface"

            android:inputType="textEmailAddress"/>


    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:hint="@string/username_register"

        android:layout_marginBottom="15dp"

        app:boxBackgroundMode="outline"

        app:boxStrokeColor="@color/text_input_color"

        app:boxStrokeWidth="3dp">


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/etUsername"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:textColor="@color/text_primary"

            android:textColorHint="@color/text_secondary"

            android:backgroundTint="@color/surface"

            android:inputType="text"/>


    </com.google.android.material.textfield.TextInputLayout>






    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:hint="@string/password"

        android:layout_marginBottom="15dp"

        app:boxBackgroundMode="outline"

        app:boxStrokeColor="@color/text_input_color"

        app:boxStrokeWidth="3dp"

        app:endIconMode="password_toggle">


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/etPassword"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:textColor="@color/text_primary"

            android:textColorHint="@color/text_secondary"

            android:backgroundTint="@color/surface"

            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>






    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:hint="@string/password_confirmation"

        android:layout_marginBottom="15dp"

        app:boxBackgroundMode="outline"

        app:boxStrokeColor="@color/text_input_color"

        app:boxStrokeWidth="3dp"

        app:endIconMode="password_toggle">


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/etConfirmPassword"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:textColor="@color/text_primary"

            android:textColorHint="@color/text_secondary"

            android:backgroundTint="@color/surface"

            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>






    <com.google.android.material.button.MaterialButton

        android:id="@+id/buttonSignUp"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:backgroundTint="@color/primary"

        android:textColor="@android:color/white"

        android:textSize="25sp"

        android:text="@string/sign_up"

        android:fontFamily="@font/poppins_semibold"

        android:layout_marginTop="10dp"

        app:cornerRadius="5dp"/>






    <TextView

        android:id="@+id/tvAlreadyHaveAccount"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:textAlignment="center"

        android:text="@string/already_have_an_account"

        android:textColor="@color/text_primary"

        android:fontFamily="@font/inter"

        android:textSize="15sp"

        android:textStyle="bold"

        android:layout_marginTop="20dp"/>


</LinearLayout>