<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"

    android:layout_height="match_parent"


    android:orientation="vertical"

    android:gravity="center"


    android:background="@color/background"


    tools:context=".ui.fragments.WelcomeFragment">





    <com.airbnb.lottie.LottieAnimationView

        android:layout_width="250dp"

        android:layout_height="250dp"


        app:lottie_rawRes="@raw/spoon"

        app:lottie_autoPlay="true"

        app:lottie_loop="true"


        android:layout_marginTop="50dp"/>





    <TextView

        android:layout_width="match_parent"

        android:layout_height="wrap_content"


        android:text="@string/start_your"


        android:textSize="30sp"


        android:fontFamily="@font/poppins_semibold"


        android:textColor="@color/primary"


        android:layout_marginTop="50dp"


        android:textAlignment="center"/>





    <TextView

        android:layout_width="match_parent"

        android:layout_height="wrap_content"


        android:text="@string/cooking_journey"


        android:textSize="30sp"


        android:fontFamily="@font/poppins_semibold"


        android:textColor="@color/primary"


        android:layout_marginTop="10dp"


        android:textAlignment="center"/>





    <TextView

        android:layout_width="match_parent"

        android:layout_height="wrap_content"


        android:text="@string/save_organize_and_access_10_your_recipes_anytime"


        android:textAlignment="center"


        android:textSize="20sp"


        android:fontFamily="@font/inter"


        android:layout_marginTop="20dp"


        android:lineHeight="30dp"


        android:textColor="@color/text_secondary"/>






    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"


        android:orientation="horizontal"


        android:gravity="center"


        android:layout_margin="30dp">





        <com.google.android.material.button.MaterialButton


            android:id="@+id/buttonLogin"


            android:layout_width="130dp"


            android:layout_height="48dp"


            android:text="@string/login"


            android:textSize="19sp"


            android:textColor="@color/surface"


            android:fontFamily="@font/poppins_semibold"


            android:backgroundTint="@color/primary"


            app:strokeColor="@color/primary"


            app:strokeWidth="1dp"


            android:elevation="6dp"


            app:cornerRadius="5dp"

            android:layout_marginEnd="20dp"/>






        <com.google.android.material.button.MaterialButton


            android:id="@+id/buttonRegister"


            android:layout_width="130dp"


            android:layout_height="48dp"


            android:text="@string/register"


            android:textSize="19sp"


            android:textColor="@color/text_primary"


            android:fontFamily="@font/poppins_semibold"


            android:backgroundTint="@color/surface"


            app:strokeColor="@color/primary"


            app:strokeWidth="1dp"


            android:elevation="6dp"


            app:cornerRadius="5dp"

            android:layout_marginStart="20dp"/>




    </LinearLayout>



</LinearLayout>