<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"

    tools:context=".ui.fragments.SearchFragment">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">


        <Toolbar

            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/app_name"
                android:textSize="50sp"

                android:textColor="@color/primary"

                android:fontFamily="@font/poppins_semibold"

                android:layout_gravity="center"/>


        </Toolbar>



        <TextView

            android:id="@+id/tvWelcome"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/search_recipes"

            android:textSize="30sp"

            android:textColor="@color/text_primary"

            android:fontFamily="@font/poppins_semibold"

            app:layout_constraintTop_toBottomOf="@id/toolBar"

            app:layout_constraintStart_toStartOf="parent"/>



        <TextView

            android:id="@+id/tvDescription"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/find_your_favorite_meal_by_name"

            android:textSize="16sp"

            android:textColor="@color/text_secondary"

            android:fontFamily="@font/inter"

            app:layout_constraintTop_toBottomOf="@id/tvWelcome"

            app:layout_constraintStart_toStartOf="parent"/>




        <SearchView

            android:id="@+id/searchView"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:queryHint="@string/home_page_query_hint"
            android:queryBackground="@null"

            android:searchHintIcon="@null"

            android:iconifiedByDefault="false"

            android:background="@drawable/search_bkg"

            android:focusable="false"

            android:closeIcon="@drawable/outline_close_24"

            android:searchIcon="@drawable/baseline_search_24"


            android:layout_marginTop="15dp"

            app:layout_constraintTop_toBottomOf="@id/tvDescription"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout


            android:id="@+id/layoutBegin"


            android:layout_width="match_parent"

            android:layout_height="wrap_content"


            android:orientation="vertical"

            android:gravity="center"




            app:layout_constraintTop_toBottomOf="@id/searchView"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:visibility="visible">



            <ImageView

                android:layout_width="100dp"

                android:layout_height="100dp"

                android:src="@drawable/outline_restaurant_24"/>




            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"


                android:text="@string/ready_to_cook"

                android:textSize="30sp"


                android:textColor="@color/text_primary"

                android:fontFamily="@font/poppins_semibold"


                android:layout_marginTop="10dp"/>





            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"


                android:text="@string/ready_to_cook_description"


                android:textSize="18sp"

                android:textAlignment="center"

                android:textColor="@color/text_secondary"

                android:fontFamily="@font/inter"/>


        </LinearLayout>





        <LinearLayout


            android:id="@+id/layoutNotFound"


            android:layout_width="match_parent"

            android:layout_height="wrap_content"


            android:orientation="vertical"

            android:gravity="center"


            android:visibility="gone"


            android:layout_marginTop="30dp"


            app:layout_constraintTop_toBottomOf="@id/searchView"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintEnd_toEndOf="parent">





            <ImageView

                android:layout_width="100dp"

                android:layout_height="100dp"

                android:src="@drawable/outline_close_24"/>




            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"


                android:text="@string/no_recipes_found"

                android:textSize="30sp"

                android:textColor="@color/text_primary"

                android:fontFamily="@font/poppins_semibold"

                android:layout_marginTop="10dp"/>





            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"


                android:text="@string/try_searching_with_another_keyword"

                android:textSize="18sp"

                android:textColor="@color/text_secondary"

                android:textAlignment="center"

                android:fontFamily="@font/inter"/>


        </LinearLayout>






        <LinearLayout


            android:id="@+id/layoutResult"


            android:layout_width="match_parent"

            android:layout_height="wrap_content"


            android:orientation="vertical"


            android:visibility="gone"


            android:layout_marginTop="30dp"


            app:layout_constraintTop_toBottomOf="@id/searchView"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintEnd_toEndOf="parent">





            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"


                android:text="@string/search_results"

                android:textSize="25sp"

                android:textColor="@color/text_primary"

                android:fontFamily="@font/poppins_semibold"/>





            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/rvSearchResult"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"


                android:layout_marginTop="10dp"


                tools:listitem="@layout/item_favorites"/>



        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>